[gd_scene load_steps=6 format=3 uid="uid://b4lc01wwcwor8"]

[ext_resource type="Script" path="res://Scenes/Stages/Stage1/Boss/boss_1_bullet.gd" id="1_scp2u"]
[ext_resource type="Texture2D" uid="uid://coqmxy86swmbm" path="res://Assets/Stages/01/Bullet1.png" id="2_abilo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mhdy1"]
radius = 5.0

[sub_resource type="Animation" id="Animation_bgys7"]
resource_name = "Disappear"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3h6d5"]
_data = {
"Disappear": SubResource("Animation_bgys7")
}

[node name="Boss1Bullet" type="Area2D" groups=["Bullet"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_scp2u")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_abilo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mhdy1")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3h6d5")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
